--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Fred's Food</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="FredFood/styles.css">
   <link rel="icon" href="fff.ico">
 </head>
 
